falco-test-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: falco-test-pod
spec:
  nodeName: k8s-worker1
  containers:
    - name: falco-test
      image: busybox:1.33.1
      command: ['sh', '-c', 'while true; do cat /etc/shadow; sleep 5; done']
