no-registry-pod.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: gcr-busybox
spec: 
  restartPolicy: 
  containers: 
  - name: busybox 
    image: gcr.io/google-containers/busybox
    command: ['sh', '-c', 'sleep 3600']
