pod-admission-controller.yml
apiVersion: v1
kind: Pod
metadata:
  name: imagepolicy-busybox-pod
spec:
  restartPolicy: Never
  containers:
    - name: busybox
      image: busybox:1.33.1
